Fixes broken CSS and JS

--- a/style.css
+++ b/style.css
@@ -25,10 +25,6 @@ html, body {
     background-color: rgba(45, 45, 45, 1);
     color: white;
     font-weight: lighter;
-}
-
-h1 {
-    font-weight: bold;
     margin-bottom: 20px;
 }
 
@@ -108,6 +104,10 @@ a {
 
 h5 {
     font-weight: lighter;
+}
+
+#thh2 {
+    font-size: 1.5em;
 }
 
 
